# next-web

./: .gitignore  Cargo.toml  README.md
next-code-builder/: Cargo.toml
next-code-builder/src/: builder_rule.rs  code_builder.rs  column_info.rs  database_client.rs  database_meta.rs  main.rs  tera_context.rs  type_util.rs  write_text.rs
next-code-builder/templates/: controller.tmp  entity.tmp  mapper.tmp  repository.ddd.tmp  repository_impl.ddd.tmp  service.ddd.tmp  service.mvc.tmp  service_impl.ddd.tmp  service_impl.mvc.tmp
next-web-framework/: Cargo.toml
next-web-framework/docker/: .env  docker-compose-env.yml  docker-compose-service.yml
next-web-framework/next-web-ai/: Cargo.toml
next-web-framework/next-web-ai/src/: application_ai_properties.rs  chat_client.rs  lib.rs  tests.rs
next-web-framework/next-web-ai/src/ai/: mod.rs
next-web-framework/next-web-ai/src/chat/: mod.rs
next-web-framework/next-web-ai/src/convert/: converter.rs
next-web-framework/next-web-ai/src/deep_seek/: application_ai_properties.rs  mod.rs  properties.rs
next-web-framework/next-web-ai/src/model/: mod.rs  model.rs  model_description.rs  model_options.rs  model_request.rs  model_response.rs  model_result.rs  response_meta_data.rs  result_meta_data.rs  streaming_model.rs
next-web-framework/next-web-ai/src/observation/: mod.rs  noop_observation.rs  noop_observation_registry.rs  (+9 more)
next-web-framework/next-web-common/: Cargo.toml
next-web-framework/next-web-common/src/: lib.rs
next-web-framework/next-web-core/: Cargo.toml
next-web-framework/next-web-core/src/: lib.rs
next-web-framework/next-web-crud/: Cargo.toml
next-web-framework/next-web-data/: Cargo.toml
next-web-framework/next-web-data-database/: Cargo.toml
next-web-framework/next-web-data-minio/: Cargo.toml
next-web-framework/next-web-data-mongodb/: Cargo.toml
next-web-framework/next-web-data-mongodb/src/: lib.rs
next-web-framework/next-web-data-redis/: Cargo.toml
next-web-framework/next-web-data-redis/src/: lib.rs
next-web-framework/next-web-data/next-web-data-database/: Cargo.toml  README.md
next-web-framework/next-web-data/next-web-data-elasticsearch/: Cargo.toml
next-web-framework/next-web-data/next-web-data-minio/: Cargo.toml
next-web-framework/next-web-data/next-web-data-mongodb/: Cargo.toml
next-web-framework/next-web-data/next-web-data-redis/: Cargo.toml
next-web-framework/next-web-dev/: CHANGELOG.md  Cargo.toml  README.md
next-web-framework/next-web-dev/src/: lib.rs  tests.rs
next-web-framework/next-web-document/: Cargo.toml  hello.docx
next-web-framework/next-web-document-excel/excel-core/: Cargo.toml
next-web-framework/next-web-document-excel/src/: lib.rs
next-web-framework/next-web-document/next-web-document-excel/: Cargo.toml
next-web-framework/next-web-document/src/: lib.rs  tests.rs
next-web-framework/next-web-email/: Cargo.toml
next-web-framework/next-web-email/src/: lib.rs  tests.rs
next-web-framework/next-web-gateway/: Cargo.toml  README.md  application.yaml
next-web-framework/next-web-gateway/src/: lib.rs  tests.rs
next-web-framework/next-web-i18n/: Cargo.toml
next-web-framework/next-web-i18n/src/: lib.rs  tests.rs
next-web-framework/next-web-id/: Cargo.toml
next-web-framework/next-web-ip/: Cargo.toml
next-web-framework/next-web-ip/src/: lib.rs  searcher.rs  tests.rs
next-web-framework/next-web-macro/: Cargo.toml
next-web-framework/next-web-macro/src/: lib.rs
next-web-framework/next-web-macros/: Cargo.toml
next-web-framework/next-web-macros/src/: lib.rs
next-web-framework/next-web-mq/: Cargo.toml
next-web-framework/next-web-mq/src/: lib.rs
next-web-framework/next-web-mqtt/: Cargo.toml  README.md
next-web-framework/next-web-mqtt/src/: lib.rs
next-web-framework/next-web-open-api/: Cargo.toml
next-web-framework/next-web-open-api/src/: lib.rs
next-web-framework/next-web-retry/: Cargo.toml  README.md
next-web-framework/next-web-retry/src/: lib.rs  recovery_callback.rs  retry_callback.rs  retry_context.rs  retry_listener.rs  retry_operations.rs  retry_policy.rs  retry_state.rs
next-web-framework/next-web-security/: Cargo.toml  README.md
next-web-framework/next-web-security/next-web-security-core/: Cargo.toml
next-web-framework/next-web-security/next-web-security-macro/: Cargo.toml
next-web-framework/next-web-security/src/: lib.rs  use_router.rs
next-web-framework/next-web-shiro/: Cargo.toml
next-web-framework/next-web-shiro/src/: lib.rs
next-web-framework/next-web-sms/: Cargo.toml  README.md
next-web-framework/next-web-sms/src/: lib.rs
next-web-framework/next-web-tests/: Cargo.toml
next-web-framework/next-web-tests/examples/: test_ai.rs  test_application_event.rs  test_auth.rs  test_data.rs  test_database.rs  test_decoder_and_vaild.rs  test_desensitized.rs  test_i18n.rs  test_in_map_services.rs  test_job.rs  test_macros.rs  test_mqtt.rs  test_properties.rs  test_redis.rs  test_retry.rs  test_scheduled.rs  test_security.rs  test_singleton.rs  test_state_machine.rs  test_stream.rs  test_vec_map_services.rs  test_websocket.rs
next-web-framework/next-web-tests/resources/: application.yaml  hello.json
next-web-framework/next-web-tests/src/: main.rs  test_excel.rs  test_mqtt.rs  test_redis.rs  test_websocket.rs
next-web-framework/next-web-utils/: Cargo.toml  README.md
next-web-framework/next-web-utils/src/: bencher.rs  calendar_util.rs  date_time_util.rs  digester.rs  env_util.rs  file_util.rs  lib.rs  password_encoder.rs  regex_util.rs
next-web-framework/next-web-websocket/: Cargo.toml  README.md
next-web-framework/next-web-websocket/src/: apply_router.rs  lib.rs
next-web-framework/next-web-wechat/: Cargo.toml
next-web-framework/next-web-wechat/src/: client.rs  credential.rs  error.rs  lib.rs  response.rs  user.rs
next-web-framework/rudi-main/: Cargo.toml
next-web-framework/rudi-main/rudi/: Cargo.toml
next-web-framework/rudi-main/rudi-dev/: Cargo.toml
next-web-framework/rudi-main/rudi-macro/: Cargo.toml
next-web-framework/rudi-main/rudi-macro-dev/: Cargo.toml
next-web-framework/src/: lib.rs
(+1265 files in other folders)
