[workspace]
members = [
    "next-code-builder",
    "next-web-framework",
]

resolver = "2"

[workspace.package]
rust-version = "1.86.0"
edition = "2021"
version = "0.1.0"
readme = "README.md"
authors = ["Listening <yuenxillar@163.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Listening/next-web-framework"
repository = "https://github.com/Listening/next-web-framework"
include = ["**/*.rs", "Cargo.toml"]

[workspace.dependencies]
# dev dependencies
tokio = { version = "1.44.1" }
axum = { version = "0.8.3" }
tower-http = { version = "0.6.2" }
axum-prometheus = { version = "0.7.0" }
axum-core = { version = "0.5.2" }

# serialization and deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = { version = "0.9.34" }
serde_json = { version = "1.0.133" }
serde_repr = { version = "0.1.20" }
quick-xml = { version = "0.37.4", features = ["serialize"] }
strum = { version = "0.27", features = ["derive"] }


reqwest = { version = "0.12.15", features = ["json"] }
aes = { version = "^0.8.4" }
once_cell = { version = "1.20.2" }
async-trait = { version = "0.1.88" }
chrono = { version = "0.4.40" }
hashbrown = { version = "0.15.2", features = ["serde"] }
regex = { version = "1.11.1" }
jsonwebtoken = { version = "9.3.0" }
rust-embed-for-web = { version = "11.2.1" }
matchit = { version = "0.8.4" }
bcrypt = { version = "0.16.0" }
rand = { version = "0.8.5" }
uuid = { version = "1.16.0", features = ["v4"] }
tokio-cron-scheduler = { version = "0.13.0" }
http-body-util = { version = "0.1.2" }
parking_lot = { version = "0.12.3" }
flume = { version = "0.11.1" }
dyn-clone = { version = "1.0.19" }
lettre = { version = "0.11.15", features = [
    "smtp-transport",
    "builder",
    "tokio1-native-tls",
] }
base64 = { version = "0.22.1" }

thiserror = { version = "2.0.8" }
anyhow = { version = "1.0.94" }

futures = { version = "0.3.31" }
futures-util = { version = "0.3.31" }

sha1 = { version = "0.10.6" }
sha2 = { version = "0.10.8" }
md5 = { version = "0.7.0" }
md2 = { version = "0.10.2" }
hex = { version = "0.4.3" }

# services
rbs = { version = "4.5" }
rbatis = { version = "4.5" }
rbdc = { version = "4.5", default-features = false }
rbdc-pg = { version = "4.5" }
rbdc-mysql = { version = "4.5" }
rbdc-pool-fast = { version = "4.5" }


mongodb = { version = "3.2.0", features = ["zstd-compression"] }
redis = { version = "0.27.6", default-features = false, features = [
    "script",
    "json",
] }
deadpool-redis = { version = "0.18.0" }
minio-rsc = { version = "0.2.3" }
rumqttc = { version = "0.24.0" }


# rudi
rudi = { version = "0.1.0", path = "./next-web-framework/rudi-main/rudi" }


# macro dependencies
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = false }
from-attr = { version = "0.1", default-features = false }


# optional dependencies
inventory = { version = "0.3", default-features = false }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3.0", features = [
    "fmt",
    "env-filter",
    "json",
    "chrono",
] }


[workspace.lints.rust]
unsafe_code = "forbid"
private_interfaces = "deny"
private_bounds = "deny"
unreachable_pub = "deny"
missing_docs = "warn"

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z'    # Optimize for size


[profile.release.package.railway-12306]
opt-level = 3
