[workspace]
members = ["next-code-builder", "next-web-framework"]

resolver = "2"

[workspace.package]
rust-version = "1.86.0"
edition = "2021"
version = "0.1.0"
readme = "README.md"
authors = ["Listening <yuenxillar@163.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/yuenxillar/next-web"
repository = "https://github.com/yuenxillar/next-web"
include = ["**/*.rs", "Cargo.toml"]

[workspace.dependencies]
# next dependencies
next-web-dev = { version = "0.1.4" }
# next-web-core = { version = "0.1.3" }
next-web-common = { version = "0.1.0" }
next-web-mq = { version = "0.1.0" }
next-web-mqtt = { version = "0.1.3" }

# rudi-dev = { version = "0.8.6"}

# next-web-mq = {  version = "0.1.0", path = "./next-web-framework/next-web-mq"}
next-web-core = { path = "./next-web-framework/next-web-core", version = "0.1.3" }
rudi-dev = { version = "0.8.6", path = "./next-web-framework/rudi-main/rudi-dev" }

# dev dependencies
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.15" }
async-stream = { version =  "0.3.6" }
axum = { version = "0.8.3", default-features = false, features = [
    "tokio",
    "tracing",
] }
tower-http = { version = "0.6.2" }
axum-prometheus = { version = "0.7.0" }
axum-core = { version = "0.5.2" }
axum-valid = { version = "0.24.0" }
oauth2 = { version = "5.0.0" }


mimalloc = { version = "0.1.47" }

# serialization and deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = { version = "0.9.34" }
serde_json = { version = "1.0.133" }
serde_repr = { version = "0.1.20" }
quick-xml = { version = "0.37.4", features = ["serialize"] }
strum = { version = "0.27", features = ["derive"] }

# document
calamine = { version = "0.26.1" }
rust_xlsxwriter = { version = "0.87.0", features = ["serde", "ryu"] }
umya-spreadsheet = { version = "2.3.0" }
csv = { version = "1.3.1" }
printpdf = { version = "0.8.2" }

# pay
wechat-pay-rust-sdk = { version = "0.2.18" }

reqwest = { version = "0.12.15", features = ["json"] }
aes = { version = "^0.8.4" }
once_cell = { version = "1.20.2" }
async-trait = { version = "0.1.88" }
chrono = { version = "0.4.40" }
hashbrown = { version = "0.15.2", features = ["serde"] }
regex = { version = "1.11.1" }
jsonwebtoken = { version = "9.3.0" }
rust-embed-for-web = { version = "11.2.1" }
clap = { version = "4.5.37", features = ["derive"] }
matchit = { version = "0.8.4" }
bcrypt = { version = "0.16.0" }
rand = { version = "0.8.5" }
uuid = { version = "1.16.0", features = ["v4"] }
tokio-cron-scheduler = { version = "0.13.0" }
http-body-util = { version = "0.1.2" }
parking_lot = { version = "0.12.3" }
flume = { version = "0.11.1" }
dyn-clone = { version = "1.0.19" }
lettre = { version = "0.11.15", features = [
    "smtp-transport",
    "builder",
    "tokio1-native-tls",
] }
base64 = { version = "0.22.1" }
indexmap = { version = "2.9.0" }
hmac = { version = "0.12.1" }
urlencoding = { version = "2.1.3" }
dashmap = { version = "6.1.0", features = ["serde"] }
wildmatch = { version = "2.4.0" }

thiserror = { version = "2.0.8" }
anyhow = { version = "1.0.94" }

futures = { version = "0.3.31" }
futures-util = { version = "0.3.31" }
futures-core = { version = "0.3.31" }

sha1 = { version = "0.10.6" }
sha2 = { version = "0.10.8" }
md5 = { version = "0.7.0" }
md2 = { version = "0.10.2" }
hex = { version = "0.4.3" }


# data
rbs = { version = "4.5" }
rbatis = { version = "4.5" }
rbdc = { version = "4.5", default-features = false }
rbdc-pg = { version = "4.5" }
rbdc-mysql = { version = "4.5" }
rbdc-pool-fast = { version = "4.5" }

mongodb = { version = "3.2.0", features = ["zstd-compression"] }
redis = { version = "0.30.0", features = ["tokio-comp", "script", "json"] }
rslock = { version = "0.7.1", default-features = false, features = [
    "tokio-comp",
] }
deadpool-redis = { version = "0.20.0" }
minio-rsc = { version = "0.2.3" }
rumqttc = { version = "0.24.0" }
elasticsearch = { version = "9.0.0-alpha.1", features = [] }

# mq
rocketmq = { version = "5.0.0" }
amqprs = { version = "2.1.1", features = ["traces"] }

# macro dependencies
proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { version = "2" }
from-attr = { version = "0.1.3" }

# optional dependencies
inventory = { version = "0.3.20" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3.0", features = [
    "fmt",
    "env-filter",
    "json",
    "chrono",
] }


[workspace.lints.rust]
unsafe_code = "forbid"
private_interfaces = "deny"
private_bounds = "deny"
unreachable_pub = "deny"
missing_docs = "warn"

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z'    # Optimize for size
