[package]
name = "next-code-builder"
version = "0.1.0"
edition = "2021"
authors = ["Listening <yuenxillar@163.com>"]
description = "A binary to build Next code generation"

[features]
default = ["tls-rustls"]
tls-rustls=["rbdc/tls-rustls"]
tls-native-tls=["rbdc/tls-native-tls"]


[dependencies.tokio]
version = "1.41.0"

[dependencies.tera]
version = "1.20.0"

[dependencies.rbs]
version = "4.5"

[dependencies.rbdc]
version = "4.5"
default-features = false
optional = true

[dependencies.rbatis]
version = "4.5"

[dependencies.rbdc-mysql]
version="4.5"

[dependencies.rbdc-pg]
version="4.5"

[dependencies.serde]
version = "1.0.214"

[dependencies.chrono]
version = "0.4.41"