[package]
name = "next-web-framework"
edition = "2021"
authors = ["Listening <yuenxillar@163.com>"]
license = "MIT"
homepage = "https://github.com/Listening/next-web-framework"
repository = "https://github.com/Listening/next-web-framework"
include = ["**/*.rs", "Cargo.toml"]
readme = "README.md"
version = "0.1.0"
rust-version = "1.86.0"
description = "Just a simple web infrastructure framework"

[lib]
path = "src/lib.rs"

[dependencies]
# next-web libs
next-web-dev = { version = "0.1.4", path = "./next-web-dev"}
next-web-core = { version = "0.1.1", path = "./next-web-core" }

next-web-utils = { version = "0.1.0", path = "./next-web-utils", optional = true }
next-web-mqtt = { version = "0.1.0", path = "./next-web-mqtt", optional = true }
next-web-mq = { version = "0.1.0", path = "./next-web-mq", optional = true }
next-web-common = { version = "0.1.0", path = "./next-web-common", optional = true }
next-web-tests = { version = "0.1.0", path = "./next-web-tests" , optional = true}

# data
next-web-data-redis = { version = "0.1.0", path = "./next-web-data-redis", optional = true }
next-web-data-mongodb = { version = "0.1.0", path = "./next-web-data-mongodb", optional = true }
next-web-data-minio = { version = "0.1.0", path = "./next-web-data-minio", optional = true }
next-web-data-database = { version = "0.1.0", path = "./next-web-data-database", optional = true }
next-web-websocket = { version = "0.1.2", path = "./next-web-websocket", optional = true}

# document
next-web-document = { version = "0.1.0", path = "./next-web-document", optional = true }

# next-web-email = { version = "0.1.0", path = "./next-web-email", optional = true }
# next-web-macro = { version = "0.1.0", path = "./next-web-macro", optional = true }
# next-web-sms = { version = "0.1.0", path = "./next-web-sms", optional = true }
# # next-web-ai = { version = "0.1.0", path = "./next-web-ai", optional = true }
# next-web-security = { version = "0.1.0", path = "./next-web-security", optional = true }
# next-web-id = { version = "0.1.0", path = "./next-web-id", optional = true }
# next-web-ip = { version = "0.1.0", path = "./next-web-ip", optional = true }
# next-web-gateway = { version = "0.1.0", path = "./next-web-gateway", optional = true }

# next-web-wechat = { version = "0.1.0", path = "./next-web-wechat", optional = true }



rudi-macro-dev = { path = "./rudi-main/rudi-macro-dev", version = "0.1.1"}

[features]
default = ["mq"]

common =  ["next-web-common"]
utils = ["next-web-utils"]
# document = ["next-web-document"]
# email = ["next-web-email"]
# macro = ["next-web-macro"]
# mqtt = ["next-web-mqtt"]
# sms = ["next-web-sms"]
mq = ["next-web-mq"]
# # ai = ["next-web-ai"]
# security =  ["next-web-security"]
# id = ["next-web-id"]
# ip = ["next-web-ip"]
# gateway = ["next-web-gateway"]

# wechat = ["next-web-wechat"]
ws = ["next-web-websocket"]