[package]
name = "next-web-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
next-web-core = { workspace = true }
bytes = { workspace = true }
futures-core = { workspace = true}
futures-util = { workspace = true}
dashmap = { workspace = true}
reqwest = { workspace = true, features = ["stream"]}
tokio = { workspace = true, features = ["sync"]}
anyhow = { workspace = true}

[dev-dependencies]
tokio.workspace = true



[features]
default = ["deep-seek"]

deep-seek = []
