[package]
name = "next-web-common"
version = "0.1.0"
edition = "2021"
description = "A common utility library for the Next Web framework"
license.workspace = true


[dependencies]
serde.workspace = true
serde_json.workspace = true

axum-core.workspace = true
tracing.workspace = true


[features]
default = []
thread-pool = []