[package]
name = "next-web-core"
version = "0.1.1"
edition.workspace = true
description = "Core library for the Next Web framework, providing essential web server and middleware abstractions."
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
hashbrown = { workspace = true }
rust-embed-for-web = { workspace = true }
dyn-clone = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
axum = { workspace = true }
inventory = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true, optional = true }

serde_path_to_error = "0.1.17"
mime = "0.3.17"
