[package]
name = "next-web-core"
version = "0.1.3"
edition.workspace = true
description = "Core library for the Next Web framework, providing essential web server and middleware abstractions."
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
axum = { workspace = true, features = ["form", "json"]}

serde = { workspace = true }
serde_yaml = { workspace = true }

hashbrown = { workspace = true }
rust-embed-for-web = { workspace = true }
dyn-clone = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }

inventory = { workspace = true }

tokio =  { workspace = true, features = ["sync"]}

reqwest = { workspace = true }

tower-layer = "0.3.3"
tower-service = "0.3.3"

