[package]
name = "next-web-core"
version = "0.1.4"
edition.workspace = true
description = "Core library for the Next Web framework, providing essential web server and middleware abstractions."
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
axum = { workspace = true}
tokio =  { workspace = true, features = ["sync"]}

serde = { workspace = true }
serde_yaml = { workspace = true }

hashbrown = { workspace = true }
dyn-clone = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true, features = ["json", "gzip"]}
sys-locale = { workspace = true }

inventory = { workspace = true }


tower-layer = "0.3.3"
tower-service = "0.3.3"



[features]
default = ["trace-log"]
trace-log = []