[package]
name = "next-web-data-database"
version = "0.1.0"
edition = "2024"
description = "Database data provider for Next Web Framework"
readme = "README.md"
license.workspace = true

[dependencies]
serde = { workspace = true }
next-web-core = { workspace = true }
rudi-dev = { workspace = true }
tracing = { workspace = true}

rbs = { workspace = true }
rbatis = { workspace = true }
rbdc = { workspace = true, default-features = false }
rbdc-pg = { workspace = true, optional = true }
rbdc-mysql = { workspace = true, optional = true }
rbdc-pool-fast = { workspace = true, optional = true }



[features]
default = ["rbdc-pool-fast", "enable_postgres", "enable_mysql"]
enable_mysql = ["rbdc-mysql"]
enable_postgres = ["rbdc-pg"]