[package]
name = "next-web-data"
version = "0.1.0"
edition = "2024"

[dependencies]
next-web-data-redis = { version = "0.1.0", path = "./next-web-data-redis", optional = true }
next-web-data-mongodb = { version = "0.1.0", path = "./next-web-data-mongodb", optional = true }
next-web-data-minio = { version = "0.1.0", path = "./next-web-data-minio", optional = true }
next-web-data-database = { version = "0.1.0", path = "./next-web-data-database", optional = true }
next-web-data-elasticsearch= { version = "0.1.0", path = "./next-web-data-elasticsearch", optional = true }
