[package]
name = "next-web-dev"
version = "0.1.4"
edition = "2021"
keywords = ["http", "web", "framework"]
description = "Next Web Dev!"
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true, features = ["signal"]}
axum = { workspace = true, features = ["http2"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"], optional = true }
axum-prometheus = { workspace = true, optional = true }
tower-http = { workspace = true, features = [
    "trace",
    "timeout",
    "limit",
    "cors",
    "catch-panic",
] }
http-body-util = { workspace = true }
tokio-cron-scheduler = { workspace = true, optional = true }

serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }

async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
rust-embed-for-web = { workspace = true }
once_cell = { workspace = true }
hashbrown = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
regex = { workspace = true }
jsonwebtoken = { workspace = true }
matchit = { workspace = true, optional = true }
parking_lot = { workspace = true }
flume = { workspace = true }

rudi-dev = { workspace = true }

tracing-subscriber = { workspace = true }


# self dependencies
next-web-core = { workspace = true }
next-web-common = { version = "0.1.0", default-features = false, features = [
    "query-wrapper",
] }

[features]
default = ["user_security", "job_scheduler"]
tls_rustls = ["axum-server"]

user_security = ["matchit"]
job_scheduler = ["tokio-cron-scheduler"]

enable_grpc = []
enable_prometheus = ["axum-prometheus"]
