[package]
name = "next-web-dev"
version = "0.1.6"
keywords = ["http", "web", "framework"]
description = "Next Web Dev!"
license.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true, features = ["signal", "macros", "net", "fs"] }
axum = { workspace = true, features = ["http1", "http2"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"], optional = true }
axum-prometheus = { workspace = true, optional = true }
tower-http = { workspace = true, features = [
    "trace",
    "timeout",
    "limit",
    "cors",
    "catch-panic",
] }
http-body-util = { workspace = true }
tokio-cron-scheduler = { workspace = true, optional = true }

serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }

tokio-util = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
rust-embed-for-web = { workspace = true }
once_cell = { workspace = true }
hashbrown = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
regex = { workspace = true }
jsonwebtoken = { workspace = true }
parking_lot = { workspace = true }
flume = { workspace = true }

rudi-dev = { workspace = true }

tracing-subscriber = { workspace = true }
mimalloc = { workspace = true }

# self dependencies
next-web-core = { workspace = true }
next-web-common = { version = "0.1.0", default-features = false, features = [
    "query-wrapper",
] }
reqwest = { workspace = true }

serde_path_to_error = "0.1.17"
mime = "0.3.17"

[features]
default = ["job_scheduler"]
tls_rustls = ["axum-server"]

job_scheduler = ["tokio-cron-scheduler"]

enable_grpc = []
enable_prometheus = ["axum-prometheus"]
