[package]
name = "next-web-dev"
version = "0.1.7"
keywords = ["http", "web", "framework"]
description = "Next Web Dev!"
homepage = "https://crates.io/crates/next-web-dev"
license.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
next-web-core = { workspace = true }
next-web-macros = { workspace = true }
next-web-common = { version = "0.1.0", default-features = false, features = [
    "query-wrapper",
] }
next-web-security   = { workspace = true, optional = true }
next-web-retry      = { workspace = true, optional = true }

tokio = { workspace = true, features = ["signal", "macros", "net", "fs"] }
axum = { workspace = true, features = ["http2"] }
axum-core = { workspace = true }
axum-server = { version = "0.7.1", features = ["tls-rustls"], optional = true }
axum-prometheus = { workspace = true, optional = true }
tower-http = { workspace = true, features = [
    "trace",
    "timeout",
    "limit",
    "cors",
    "catch-panic",
] }
http-body-util = { workspace = true }
tokio-cron-scheduler = { workspace = true, optional = true }

serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }

tokio-util = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
regex = { workspace = true }
jsonwebtoken = { workspace = true }
flume = { workspace = true }
validator = { workspace = true}
thiserror = { workspace = true }
inventory = { workspace = true }

aes-gcm = { workspace = true, optional = true }

rudi-dev = { workspace = true }

tracing-subscriber = { workspace = true }

reqwest = { workspace = true, features = ["stream"]}
async-stream = { workspace = true }

serde_path_to_error = "0.1.17"
mime = "0.3.17"


[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true }

[target.'cfg(unix)'.dependencies]
jemallocator = { workspace = true }

[features]
default = ["enable-i18n", "enable-state-machine", "decrypt-properties"]
full = ["enable-scheduling", "enable-web-security", "enable-retry", "enable-i18n", "decrypt-properties"]

tls-rustls = ["axum-server"]

# web
enable-scheduling   = ["tokio-cron-scheduler"]
enable-web-security = ["next-web-security"]
enable-retry        = ["next-web-retry"]

enable-grpc = []
enable-prometheus = ["axum-prometheus"]
enable-i18n = []
enable-state-machine = []

decrypt-properties = ["aes-gcm"]

trace-log = []