[package]
name = "next-web-document"
version = "0.1.0"
edition = "2021"

[dependencies]
# calamine = { workspace = true, optional = true}
 next-web-document-excel = { version = "0.1.0", path = "./next-web-document-excel", optional = true }


[features]
default = ["excel"]
excel = ["next-web-document-excel"]
# excel = ["rust_xlsxwriter", "calamine"]
docx = []
