[package]
name = "next-web-gateway"
version = "0.1.0"
edition = "2021"

# [[example]]
# name = "basic_usage"
# path = "examples/basic_usage.rs"


[dependencies]
pingora = { version = "0.6.0", features = ["lb", "proxy"] }
pingora-limits = "0.6.0"

tokio = { workspace = true }

serde = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }

ipnetwork = { workspace = true }
chrono = { workspace = true }
matchit = { workspace = true }
hashbrown = { workspace = true }
bytes = { workspace = true }
form_urlencoded = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

#jemallocator = { version = "0.5.4", optional = true }

[features]
default = []
#global-allocator = ["jemallocator"]
