[package]
name = "next-web-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
from-attr = { workspace = true }
inventory = { workspace = true }

[features]
default = ["data", "register"]
data = []
register = []