[package]
name = "next-web-mq"
version = "0.1.0"
edition = "2021"
description = "Next Web Mq"
authors.workspace = true
readme.workspace = true
license.workspace = true


[dependencies]
amqprs = { workspace = true, optional = true }
serde = { workspace = true }
tracing =  { workspace = true }
rudi-dev = { workspace = true }
next-web-core = { workspace = true }



[features]
default = ["rabbitmq"]
rabbitmq = ["amqprs"]
