[package]
name = "next-web-mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {workspace = true}
next-web-core = { path = "../next-web-core", version = "0.1.0"}
rudi = { workspace = true}
rumqttc = { workspace = true}

tokio = { workspace = true}
tracing ={ workspace = true}
hashbrown = { workspace = true}