[package]
name = "next-web-mqtt"
version = "0.1.1"
edition = "2021"
description = "Next Web Mqtt"
license.workspace = true

[dependencies]
serde = {workspace = true}
next-web-core = { workspace = true}
rudi-dev = { workspace = true }
rumqttc = { workspace = true}

tokio = { workspace = true}
tracing ={ workspace = true}
hashbrown = { workspace = true}