[package]
name = "next-web-sms"
version = "0.1.0"
edition = "2021"
keywords = ["next-web", "sms", "api"]
description = "Next Web SMS"


[dependencies]
next-web-core = { workspace = true }

reqwest = { workspace = true }
chrono = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }

serde_json = { workspace = true }
serde = { workspace = true }

tracing = { workspace = true}

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }

[features]
default = ["aliyun", "tencent", "template", "sign"]
aliyun = []
tencent = []
template = []
sign = []
full = ["aliyun", "tencent", "template", "sign"]