[package]
name = "next-web-tests"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
tokio = { workspace = true, features= ["sync"]}
serde = { workspace = true }
serde_json = { workspace = true }
next-web-ip = { path = "../next-web-ip", version = "0.1.0" }
next-web-macro = { path = "../next-web-macro", version = "0.1.0" }
next-web-websocket = { path = "../next-web-websocket", version = "*" }
# next-web-mqtt = { path = "../next-web-mqtt", version = "0.1.2" }
# next-web-data-redis = { path = "../next-web-data/next-web-data-redis", version = "0.1.0", features = ["expired-key-listener"]}

next-web-dev = { path = "../next-web-dev", version = "0.1.4" }
next-web-core = { workspace = true }
# next-web-data-database = { path = "../next-web-data-database", version = "0.1.0" }
# next-web-data-mongodb = { path = "../next-web-data-mongodb", version = "0.1.0" }
next-web-document = { path = "../next-web-document", version = "0.1.0", features = [
    "excel",
] }
next-web-security= { path = "../next-web-security", version = "*" }

rust_xlsxwriter = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
tokio-util = { workspace = true }
futures = { workspace = true }
matchit = { workspace = true}

[dev-dependencies]
next-web-mqtt = { path = "../next-web-mqtt", version = "*" }
next-web-ai = { path = "../next-web-ai", version = "*", features = ["deep-seek"]}
validator = { version = "0.20.0", features = ["derive"] }